@@ -17,6 +17,7 @@
 
 package org.efaps.db.databases;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DatabaseMetaData;
 import java.sql.ResultSet;
@@ -31,9 +32,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 
-import javax.naming.InitialContext;
-import javax.naming.NamingException;
-
 import org.apache.commons.dbutils.RowProcessor;
 import org.apache.commons.lang3.StringUtils;
 import org.efaps.db.Context;
@@ -45,8 +43,6 @@ import org.efaps.db.wrapper.SQLInsert;
 import org.efaps.db.wrapper.SQLPart;
 import org.efaps.db.wrapper.SQLSelect;
 import org.efaps.db.wrapper.SQLUpdate;
-import org.efaps.init.INamingBinds;
-import org.efaps.init.IeFapsProperties;
 import org.efaps.update.util.InstallationException;
 import org.efaps.util.EFapsException;
 import org.efaps.util.cache.AbstractCache;
@@ -96,33 +92,6 @@ public abstract class AbstractDatabase<T extends AbstractDatabase<?>>
      * Logging instance used in this class.
      */
     private static final Logger LOG = LoggerFactory.getLogger(AbstractDatabase.class);
-
-    static {
-        try {
-            final InitialContext initCtx = new InitialContext();
-            javax.naming.Context envCtx = null;
-            try {
-                envCtx = (javax.naming.Context) initCtx.lookup("java:comp/env");
-            } catch (final NamingException e) {
-                AbstractDatabase.LOG.info("Catched NamingException on evaluation for DataBase.");
-            }
-            // for a build the context might be different, try this before surrender
-            if (envCtx == null) {
-                envCtx = (javax.naming.Context) initCtx.lookup("java:/comp/env");
-            }
-            try {
-                final Map<?, ?> props = (Map<?, ?>) envCtx.lookup(INamingBinds.RESOURCE_CONFIGPROPERTIES);
-                if (props != null) {
-                    AbstractDatabase.SCHEMAPATTERN = (String) props.get(IeFapsProperties.DBSCHEMAPATTERN);
-                    AbstractDatabase.CATALOG = (String) props.get(IeFapsProperties.DBCATALOG);
-                }
-            } catch (final NamingException e) {
-                AbstractDatabase.LOG.info("Catched NamingException on evaluation for Properties.");
-            }
-        } catch (final NamingException e) {
-            AbstractDatabase.LOG.error("NamingException", e);
-        }
-    }
 
     /**
      * The enumeration defines the known column types in the database.
@@ -960,6 +929,27 @@ public abstract class AbstractDatabase<T extends AbstractDatabase<?>>
         }
     }
 
+    public void upsertIndex(final Connection con,
+                            final String tableName,
+                            final String indexName,
+                            final String columns)
+        throws SQLException
+    {
+        final StringBuilder cmd = new StringBuilder()
+                        .append("create INDEX IF NOT EXISTS ").append(indexName)
+                        .append(" ON ").append(tableName).append("(")
+                        .append(columns).append(")");
+
+        AbstractDatabase.LOG.debug("    ..SQL> " + cmd.toString());
+        // excecute statement
+        final Statement stmt = con.createStatement();
+        try {
+            stmt.execute(cmd.toString());
+        } finally {
+            stmt.close();
+        }
+    }
+
     /**
      * Returns the quote used to select tables.
      *
@@ -1157,11 +1147,16 @@ public abstract class AbstractDatabase<T extends AbstractDatabase<?>>
      * @throws ClassNotFoundException if class for the DB is not found
      * @throws InstantiationException if DB class could not be instantiated
      * @throws IllegalAccessException if DB class could not be accessed
+     * @throws SecurityException
+     * @throws NoSuchMethodException
+     * @throws InvocationTargetException
+     * @throws IllegalArgumentException
      */
     public static AbstractDatabase<?> findByClassName(final String _dbClassName)
-        throws ClassNotFoundException, InstantiationException, IllegalAccessException
+        throws ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException,
+        InvocationTargetException, NoSuchMethodException, SecurityException
     {
-        return (AbstractDatabase<?>) Class.forName(_dbClassName).newInstance();
+        return (AbstractDatabase<?>) Class.forName(_dbClassName).getConstructor().newInstance();
     }
 
     /**
